Heading alignment, mobile menu overlap fixed

--- a/styles.css
+++ b/styles.css
@@ -81,18 +81,17 @@ h4, p, q, small, nav, button, form, footer a, input, select, .form-required{
     font-family: var(--body-text);
 }
 
-/*
-h1, h2, h3, h4, p{
-    padding: 0 30px;
-}
-*/
-
 h1{
     font-size: 3rem;
+    margin-left: 20px;
 }
 
 h2{
     font-size: 3rem;
+}
+
+h2, h3{
+    margin-left: 30px;
 }
 
 h3{
@@ -143,12 +142,13 @@ header{
 
 header img{
     margin-top: 10px;
-    margin-right: auto;
+    margin-left: -30px;
 }
 
 h1 + p{
     width: 25ch;
     font-size: 1.15rem;
+    margin-left: 20px;
 }
 
 /*MOBILE MENU STYLES*/
@@ -160,8 +160,8 @@ h1 + p{
     text-transform: uppercase;
     font-weight: bold;
     background-color: var(--yellow);
-    width: 200px;
-    padding: 15px 0;
+    width: 140px;
+    padding: 10px 0;
     position: absolute;
     right: 0px;
     top: 40px;
@@ -198,6 +198,7 @@ nav ul{
     width: 100%;
     top: 0px;
     right: 0px;
+    padding: 15px 0;
 }
 
 #toggle:checked ~ ul{
@@ -221,7 +222,7 @@ nav ul{
 
 #intro p{
     line-height: 1.75;
-    margin-bottom: 10px;
+    margin: 0px 30px 10px;
 }
 
 #img-grid img{
@@ -251,6 +252,7 @@ nav ul{
     grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: 15px;
     justify-self: center;
+    align-self: center;
 }
 
 #plan section{
